--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "netflix_gpt",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.12.2",
+    "openai": "^4.52.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -37,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "react-router-dom": "^6.23.1",
     "tailwindcss": "^3.4.4"
   }
